# any-terminal-size

./: .gitignore  Cargo.toml  README.md  build.rs
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/any_terminal_size/: all.html  fn.any_terminal_size.html  fn.any_terminal_size_of_process.html  fn.create_dll.html  fn.create_dll_if_not_exists_already.html  fn.remove_dll.html  fn.remove_dll_if_exists.html  index.html  sidebar-items.js  struct.Height.html  struct.Width.html
doc/any_terminal_size/windows/: fn.any_terminal_size.html  fn.any_terminal_size_of_process.html
doc/any_terminal_size/windows/dll/: fn.create_dll.html  fn.create_dll_if_not_exists_already.html  fn.remove_dll.html  fn.remove_dll_if_exists.html
doc/src/any_terminal_size/: lib.rs.html  windows.rs.html
doc/src/any_terminal_size/windows/: dll.rs.html  dll_injection.rs.html
doc/src/any_terminal_size/windows/dll/: dll_contents.rs.html
examples/: get_size.rs
injection_dlls/any_terminal_size_dll/: Cargo.toml
injection_dlls/any_terminal_size_dll/src/: lib.rs
src/: lib.rs  unix.rs  windows.rs
src/unix/: unix_impl.rs
src/windows/: dll.rs  dll_injection.rs
src/windows/dll/: dll_contents.rs
tests/: integration_test.rs
