[package]
name = "any_terminal_size_injection_dll"
version = "0.1.0"
authors = [
    "Jesses Gott <jesses.gott.na+any_terminal_size_injection_dll@gmail.com>"
]
description = "Injection dll to get the terminal size of some process which is not yours on windows"
documentation = ""
repository = "https://github.com/jessesna/any-terminal-size-injection-dll"
keywords = ["terminal", "console", "term", "size", "dimensions", "windows"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
version = "0.1"

[dependencies]
libc = "0.2"
terminal_size = "0.1.17"
